--- a/app/templates/components/icd10_diagnosis_modal.html
+++ b/app/templates/components/icd10_diagnosis_modal.html
@@ -220,7 +220,7 @@
             
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="add-diagnosis-btn" disabled>
+                <button type="button" class="btn btn-primary" id="add-diagnosis-btn" disabled onclick="icd10Manager.addDiagnosis()">
                     <i class="bi bi-plus-circle"></i> Add Diagnosis
                 </button>
             </div>
