--- a/app/templates/components/icd10_diagnosis_modal.html
+++ b/app/templates/components/icd10_diagnosis_modal.html
@@ -252,8 +252,7 @@
     </div>
 </div>
 
-<!-- Include the JavaScript -->
-<script src="{{ url_for('static', filename='js/icd10_diagnosis.js') }}"></script>
+<!-- JavaScript is included in the main template -->
 
 <!-- Initialize with patient ID if available -->
 {% if patient %}
